--- a/genindex.html
+++ b/genindex.html
@@ -157,6 +157,8 @@
 <h2 id="A">A</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="core.html#tlang.core.ALLSTARAlteration">ALLSTARAlteration (class in tlang.core)</a>
+</li>
       <li><a href="core.html#tlang.core.Alteration">Alteration (class in tlang.core)</a>
 </li>
   </ul></td>
@@ -332,9 +334,11 @@
 </li>
       <li><a href="core.html#tlang.core.Placeholder">Placeholder (class in tlang.core)</a>
 </li>
-      <li><a href="core.html#tlang.core.Alteration.process">process() (Alteration method)</a>
+      <li><a href="core.html#tlang.core.ALLSTARAlteration.process">process() (ALLSTARAlteration method)</a>
 
       <ul>
+        <li><a href="core.html#tlang.core.Alteration.process">(Alteration method)</a>
+</li>
         <li><a href="core.html#tlang.core.Completed.process">(Completed method)</a>
 </li>
         <li><a href="core.html#tlang.core.Decache.process">(Decache method)</a>
