test and fix ALLSTARAlteration

--- a/genindex.html
+++ b/genindex.html
@@ -334,11 +334,9 @@
 </li>
       <li><a href="core.html#tlang.core.Placeholder">Placeholder (class in tlang.core)</a>
 </li>
-      <li><a href="core.html#tlang.core.ALLSTARAlteration.process">process() (ALLSTARAlteration method)</a>
+      <li><a href="core.html#tlang.core.Alteration.process">process() (Alteration method)</a>
 
       <ul>
-        <li><a href="core.html#tlang.core.Alteration.process">(Alteration method)</a>
-</li>
         <li><a href="core.html#tlang.core.Completed.process">(Completed method)</a>
 </li>
         <li><a href="core.html#tlang.core.Decache.process">(Decache method)</a>
@@ -428,8 +426,12 @@
 </li>
       <li><a href="core.html#tlang.core.stitch">stitch() (in module tlang.core)</a>
 </li>
-      <li><a href="core.html#tlang.core.Alteration.switch">switch() (Alteration method)</a>
+      <li><a href="core.html#tlang.core.ALLSTARAlteration.switch">switch() (ALLSTARAlteration method)</a>
+
+      <ul>
+        <li><a href="core.html#tlang.core.Alteration.switch">(Alteration method)</a>
 </li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
