replace of replace works in full

--- a/genindex.html
+++ b/genindex.html
@@ -99,12 +99,8 @@
 <h2 id="_">_</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="core.html#tlang.core.Terminal.__add__">__add__() (Terminal method)</a>
-
-      <ul>
-        <li><a href="core.html#tlang.core.Transpiler.__add__">(Transpiler method)</a>
+      <li><a href="core.html#tlang.core.Transpiler.__add__">__add__() (Transpiler method)</a>
 </li>
-      </ul></li>
       <li><a href="core.html#tlang.core.Alteration.__call__">__call__() (Alteration method)</a>
 
       <ul>
@@ -181,11 +177,11 @@
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="core.html#tlang.core.Placeholder.cache">cache (Placeholder attribute)</a>
+</li>
       <li><a href="core.html#tlang.core.Cached">Cached (class in tlang.core)</a>
 </li>
       <li><a href="core.html#tlang.core.CachedParse">CachedParse (class in tlang.core)</a>
-</li>
-      <li><a href="core.html#tlang.core.clean_links">clean_links() (in module tlang.core)</a>
 </li>
       <li><a href="core.html#tlang.core.Combinator">Combinator (class in tlang.core)</a>
 </li>
@@ -468,10 +464,6 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="core.html#tlang.core.Unique">Unique (class in tlang.core)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="core.html#tlang.core.update_links">update_links() (in module tlang.core)</a>
 </li>
   </ul></td>
 </tr></table>
